--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,9 @@
       </button>
     </div>
 
+      <div class="container text-center mb-5">
+        <p><a class="btn btn-lg btn-primary" href="/v1/hotels">API GET all check</a></p>
+      </div>
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
